unpackaged/main/default/objects/Box_OAuth_Object__c/Box_OAuth_Object__c.object-meta.xml
<CustomObject>
    <label>Box OAuth Object</label>
    <nameField>
        <label>Box OAuth Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box OAuth Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>