unpackaged/main/default/objects/Box_OAuth_Object__c/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <label>Auth Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>