unpackaged/main/default/objects/Box_OAuth_Object__c/fields/Auth_Token_Expires__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_Expires__c</fullName>
    <label>Auth Token Expires</label>
    <type>DateTime</type>
</CustomField>