unpackaged/main/default/objects/Box_OAuth_Object__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>