unpackaged/main/default/objects/Box_OAuth_Object__c/fields/Refresh_Token_Expires__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Expires__c</fullName>
    <label>Refresh Token Expires</label>
    <type>DateTime</type>
</CustomField>